--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,1 +1,54 @@
 // TODO: Настройте зависимости и конфигурацию сборки для модуля app
+plugins {
+    id 'com.android.application'
+    // Если используете Kotlin, добавьте:
+    // id 'org.jetbrains.kotlin.android'
+}
+
+android {
+    compileSdk 34 // Или другая версия API
+
+    defaultConfig {
+        applicationId "com.example.camerapreview" // Замените на ваш пакет
+        minSdk 21 // Минимальная версия SDK
+        targetSdk 34 // Целевая версия SDK
+        versionCode 1
+        versionName "1.0"
+
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            // Настройки для debug сборки, если нужны
+        }
+    }
+    compileOptions { // Необходимы, если используете Java 8+ фичи
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    // Если используете Kotlin:
+    // kotlinOptions {
+    //    jvmTarget = '1.8'
+    // }
+    namespace 'com.example.camerapreview' // Укажите тот же namespace/package
+}
+
+dependencies {
+    // Здесь будут ваши зависимости, например:
+    implementation 'androidx.core:core-ktx:1.9.0' // Пример
+    implementation 'androidx.appcompat:appcompat:1.6.1' // Пример
+    implementation 'com.google.android.material:material:1.11.0' // Пример
+    // implementation "androidx.camera:camera-core:1.3.1" // Зависимости CameraX
+    // implementation "androidx.camera:camera-camera2:1.3.1"
+    // implementation "androidx.camera:camera-lifecycle:1.3.1"
+    // implementation "androidx.camera:camera-view:1.3.1"
+
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+}
