--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,16 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+// CameraX core library using camera2 implementation
+    def camerax_version = "1.3.1" // Используйте актуальную версию
+    implementation "androidx.camera:camera-core:${camerax_version}"
+    implementation "androidx.camera:camera-camera2:${camerax_version}"
+    // CameraX Lifecycle library
+    implementation "androidx.camera:camera-lifecycle:${camerax_version}"
+    // CameraX View class
+    implementation "androidx.camera:camera-view:${camerax_version}"
+
+// Для ползунка (Slider) из Material Components
+    implementation 'com.google.android.material:material:1.11.0' // Используйте актуальную версию
 }
