--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+    <!-- НЕ добавляйте сюда package="..." -->
 
+    <!-- Разрешение на использование камеры -->
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-feature android:name="android.hardware.camera.any" android:required="true" />
 
+    <!-- Объявление об использовании камеры -->
+    <uses-feature android:name="android.hardware.camera.any" android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -12,9 +16,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CameraPreview"
-	tools:targetApi="31">
-
-        <!-- Замените MainActivity на вашу главную Activity -->
+        tools:targetApi="31"> <!-- Убедитесь, что xmlns:tools объявлен в <manifest> -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -23,9 +25,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <!-- Здесь можно добавить другие компоненты: Activity, Service, Receiver, Provider -->
-
+        <!-- Здесь могут быть другие компоненты -->
     </application>
 
 </manifest>
